=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 v1.017 - Under Development

=over

=item *

Upgraded XML::Validator::Schema to the latest release, 1.06. [Sam]

=item *

Fixed Krang::Story->preview_path() to use the submitted category
argument.  This was keeping preview from writing out content to
multiple sites. [Peter]

=item *

Added password-length check to My Preferences, enforcing the
6-character minimum length on passwords that exists everywhere else in
the UI.  [Peter]

=item *

Fixed error reporting in the publish process - error messages are
displayed in a more user-friendly fashion.[Peter]

=item *

Fixed Krang::ElementClass->publish() to trap errors thrown by
HTML::Template::Expr->output(), and fixed Krang::CGI::Publisher to
properly report errors and not try to redirect users when failures
occur in preview.  [Peter]

=item *

Fixed krang_ftpd to setup higher file and memory limits.  These limits
were preventing the FTP server from operating on some systems. [Sam]

=back

=head2 v1.016 - April 20, 2004

=over

=item *

Fixed Krang::DB to always turn on mysql_auto_reconnect (it was already
on by default under mod_perl).  This should prevent the schedule
daemon from periodically dying when a database connections times out.
[Sam]

=item *

Fixed bug in Krang::ElementClass which would fail to setup
"is_$element" template vars if "$element" wasn't used as a template
var itself. [Matt]

=item *

Changed site editor to allow colons so that port numbers can be
specified for preview URLs. [Perrin]

=item *

Synchronized Devel-StackTrace with latest from CPAN, so that we are
now using the standard release. [Perrin]

=item *

t/group.t now uses Krang::Test::Content to generate random content,
rather than bin/krang_floodfill. [Peter]

=item *

More comprehensive FreeBSD support.  Krang now works on FreeBSD 4.9
and 5.2.1, and should work on versions between and previous to that